--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,13 @@
 remote_theme: "mmistakes/minimal-mistakes"
 github: [metadata]
+include: ["_pages"]
+defaults:
+  # _pages
+  -
+    scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
